--- a/index.html
+++ b/index.html
@@ -47,42 +47,42 @@ slides:
 
 works:
   - image: images/@stock/work-1.jpg
-    title: Beautiful Girl
+    title: Sample
     link_to: portfolio-item.html
     klass: graphi-design
     desc: Design &amp; Development
   - image: images/@stock/work-2.jpg
-    title: Beautiful Girl
+    title: Sample
     link_to: portfolio-item.html
     klass: graphi-design
     desc: Design &amp; Development
   - image: images/@stock/work-3.jpg
-    title: Beautiful Girl
+    title: Sample
     link_to: portfolio-item.html
     klass: graphi-design
     desc: Design &amp; Development
   - image: images/@stock/work-4.jpg
-    title: Beautiful Girl
+    title: Sample
     link_to: portfolio-item.html
     klass: graphi-design
     desc: Design &amp; Development
   - image: images/@stock/work-5.jpg
-    title: Beautiful Girl
+    title: Sample
     link_to: portfolio-item.html
     klass: graphi-design
     desc: Design &amp; Development
   - image: images/@stock/work-6.jpg
-    title: Beautiful Girl
+    title: Sample
     link_to: portfolio-item.html
     klass: graphi-design
     desc: Design &amp; Development
   - image: images/@stock/work-7.jpg
-    title: Beautiful Girl
+    title: Sample
     link_to: portfolio-item.html
     klass: graphi-design
     desc: Design &amp; Development
   - image: images/@stock/work-8.jpg
-    title: Beautiful Girl
+    title: Sample
     link_to: portfolio-item.html
     klass: graphi-design
     desc: Design &amp; Development
