--- a/home.html
+++ b/home.html
@@ -2,13 +2,13 @@
 <html lang="ko">
         <head>
                 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-                <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename=icon) }}">
+                <link rel="shortcut icon" type="image/x-icon" href="/images/logo.jpg">
                 <title>SQR</title>
         </head>
 	<center>
 	<frameset rows = "50%, 50%", border=0 frameborder=no framespacing=0>
-		<frame src="{{ html_sqr_logo }}" scrolling="no">
-		<frame src="{{ html_article }}" scrolling="auto">
+		<frame src="/images/SQR_logo.jpg" scrolling="no">
+		<frame src="/article.html" scrolling="auto">
 	</center>
 	</frameset>
 
