--- a/sqr_logo.html
+++ b/sqr_logo.html
@@ -6,7 +6,7 @@
 		<center>
 		<div>
 		{% if True %}
-		<img src="{{ url_for('static', filename=image_file) }}", width=800px, height=auto>
+		<img src="/images/SQR_logo.jpg", width=800px, height=auto>
 		{% endif %}
 		</div>
 		</center>
