--- a/sqr_logo.html
+++ b/sqr_logo.html
@@ -6,7 +6,7 @@
 		<center>
 		<div>
 		{% if True %}
-		<img src="/images/SQR_logo.jpg", width=100px, height=auto>
+		<img src="/images/SQR_logo.jpg", max-width=100%, height=auto>
 		{% endif %}
 		</div>
 		</center>
