--- a/sqr_logo.html
+++ b/sqr_logo.html
@@ -3,13 +3,11 @@
 	<head>
 	</head>
 	<body>
-		<center>
-		<div>
+		<div style="text-align: center;">
 		{% if True %}
-		<img src="/images/SQR_logo.jpg", width=800px, height=auto, vertical-align: middle>
+		<img src="/images/SQR_logo.jpg", width=500px, height=auto, vertical-align: middle>
 		{% endif %}
 		</div>
-		</center>
 	</body>
 </html>
 
