--- a/sqr_logo.html
+++ b/sqr_logo.html
@@ -3,10 +3,8 @@
 	<head>
 	</head>
 	<body>
-		<div style="text-align: center;">
-		{% if True %}
-		<img src="/images/SQR_logo.jpg", width=500px, height=auto, vertical-align: middle>
-		{% endif %}
+		<div>
+		<img src="/images/SQR_logo.jpg", style="margin-left: auto; margin-right: auto; display: block;", width=500px, height=auto, vertical-align: middle>
 		</div>
 	</body>
 </html>
