--- a/sqr_logo.html
+++ b/sqr_logo.html
@@ -4,7 +4,7 @@
 	</head>
 	<body>
 		<div>
-		<img src="/images/SQR_logo.jpg"; width=1000px; height=auto>
+		<img src="/images/SQR_logo.jpg"; align=center, width=1000px, height=auto>
 		</div>
 	</body>
 </html>
