--- a/sqr_logo.html
+++ b/sqr_logo.html
@@ -3,9 +3,11 @@
 	<head>
 	</head>
 	<body>
+		<center>
 		<div>
-		<img src="/images/SQR_logo.jpg"; align=center, width=1000px, height=auto>
+		<img src="/images/SQR_logo.jpg", width=1000px, height=auto>
 		</div>
+		</center>	
 	</body>
 </html>
 
