--- a/sqr_logo.html
+++ b/sqr_logo.html
@@ -5,7 +5,7 @@
 	<body>
 		<center>
 		<div>
-		<img src="/images/SQR_logo.jpg", width=1000px, height=auto>
+		<img src="/images/SQR_logo.jpg" width=1000px height=auto>
 		</div>
 		</center>	
 	</body>
