--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
         <head>
                 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-                <link rel="icon" type="image/x-icon" href="/images/logo.jpg">
+                <link rel="shrotcut icon" type="image/x-icon" href="/images/logo.jpg">
                 <title>SQR</title>
         </head>
 	<center>
