--- a/sqr_logo.html
+++ b/sqr_logo.html
@@ -2,12 +2,22 @@
 <html>
 	<head>
 	</head>
+	<style>
+		wrapper {
+		    display:table;
+		}
+		box {
+		    display:table-cell;
+		    vertical-align:middle;
+		}
+	</style>
 	<body>
 		<center>
-		<div>
-		<img src="/images/SQR_logo.jpg", width=800px, height=auto>
+		<div class='wrapper'>
+			<div class='box'>	
+				<img src="/images/SQR_logo.jpg", width=800px, height=auto>
+			</div>
 		</div>
 		</center>
 	</body>
 </html>
-
