--- a/sqr_logo.html
+++ b/sqr_logo.html
@@ -6,18 +6,18 @@
 		wrapper {
 		    display:table;
 		}
-		box {
+		div {
 		    display:table-cell;
 		    vertical-align:middle;
 		}
 	</style>
 	<body>
 		<center>
-		<div class='wrapper'>
-			<div class='box'>	
+		<wrapper>
+			<div>	
 				<img src="/images/SQR_logo.jpg", width=800px, height=auto>
 			</div>
-		</div>
+		</wrapper>
 		</center>
 	</body>
 </html>
