--- a/sqr_logo.html
+++ b/sqr_logo.html
@@ -15,7 +15,7 @@
 		<center>
 		<wrapper>
 			<div>	
-				<img src="/images/SQR_logo.jpg", width=800px, height=auto>
+				<br><br><img src="/images/SQR_logo.jpg", width=800px, height=auto>
 			</div>
 		</wrapper>
 		</center>
