--- a/article.html
+++ b/article.html
@@ -1,3 +1,4 @@
+<center>
 <p>
 <h1> Mark Down </h1>
 
@@ -78,4 +79,5 @@
 2019년 상반기에 삼성 갤럭시 S10e/S10/S10+/S10 5G, 삼성 갤럭시 폴드, 삼성 갤럭시 탭 S5e, 삼성 갤럭시 워치 액티브, 삼성 갤럭시 핏/핏e, 삼성 갤럭시 버즈 출시<br>
 
 </p>
+</center>
 
