--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<p  markdown="1">
 		    ** Mark Down **
 
-		    1970년 11월 흑백 텔레비전 생산 시작 <br>
+		    ** 1970년 11월 흑백 텔레비전 생산 시작 **
 		    가전 기반 성장기 (1972~1979년)
 		    1972년 11월 내수용 흑백 텔레비전 생산 시작<br>
 		    1973년 8월 수원으로 본사 이전, 생산과 관리업무의 합리화 추진<br>
