--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		</wrapper>
 		
 		<p  markdown="1">
-		    ** Mark Down **
+		    ## Mark Down
 
 		    ** 1970년 11월 흑백 텔레비전 생산 시작 **
 		    가전 기반 성장기 (1972~1979년)
