--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			</div>
 		</wrapper>
 		
-		<zero-md src="markdown.md"></zero-md>
+		<zero-md src="article.md"></zero-md>
 	</center>
 
 </html>
