--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <head>
                 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta http-equiv="Cache-Control" content="no-cache">
+		<meta http-equiv="Expires" content="0"/>
                 <link rel="shrotcut icon" type="image/x-icon" src="/images/logo.jpg">
                 <title>SQR</title>
 		<script src="https://cdn.jsdelivr.net/npm/@webcomponents/webcomponentsjs@2/webcomponents-loader.min.js"></script>
