--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
         <head>
                 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<meta http-equiv="Pragma" content="no-cache"/>
 		<meta http-equiv="Cache-Control" content="no-cache">
 		<meta http-equiv="Expires" content="0"/>
                 <link rel="shrotcut icon" type="image/x-icon" src="/images/logo.jpg">
