--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <head>
 		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
                 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-                <link rel="shrotcut icon" type="image/x-icon" src="/images/logo.jpg">
+                <link rel="shortcut icon" type="image/x-icon" src="/images/logo.jpg">
                 <title>SQR</title>
 		<script src="https://cdn.jsdelivr.net/npm/@webcomponents/webcomponentsjs@2/webcomponents-loader.min.js"></script>
 		<script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@1/src/zero-md.min.js"></script>
