--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="ko">
         <head>
-		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate, max-age=0">
                 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
                 <link rel="shortcut icon" type="image/x-icon" src="/images/logo.jpg">
                 <title>SQR</title>
